# Projects-2023-2024

./: README.md
Advanced Emotion Classification System-Natural language processing-Banijay/: Worklog - Y2C_2023-24_ADSAI.xlsx
Advanced Emotion Classification System-Natural language processing-Banijay/src/: README.md
Advanced Emotion Classification System-Natural language processing-Banijay/src/Banijay_pipeline/: Speach_to_text.ipynb  banijay_preprocessing.ipynb  creating_fragments.ipynb  detector.py  main.py  video_reader.py
Advanced Emotion Classification System-Natural language processing-Banijay/src/Error_analysis/: merged_fix.csv
Advanced Emotion Classification System-Natural language processing-Banijay/src/ML_models/: CNN_model_multiclass.ipynb  Naïve_Bayes.ipynb  Neural_models_LTSM.ipynb  Neural_models_RNN.ipynb  logistic_Regrestion.ipynb  transformer_model_multiclass_best.ipynb  transtormer_model_multiclass.ipynb
Analytics Translator for facilities domain/: Hello.py
Analytics Translator for facilities domain/Streamlit dashboard/: Dashboard.py
Analytics_Translator_for_facilities_domain/DMP/: Codebook.md  Privacy_and_GDPR_Checklist.md
Analytics_Translator_for_facilities_domain/Data/: Data Preprocessing.R
Analytics_Translator_for_facilities_domain/Data/interview/: 20102023_interview_BUasfacilities_transcript.docx  25102023_interview_BUasfacilities_transcript.docx  26102023_interview_BUasfacilities_transcript.docs.docx  26112023_interview_BUasfacilities_transcript.docs.docx  30102023_interview_BUasfacilities_transcript.docx  Call with Snoep, Anne (190715)-20231013_120235-Meeting Recording.mp4.url  ~$102023_interview_BUasfacilities_transcript.docx
Analytics_Translator_for_facilities_domain/Data/survey data/: survey_num_27_10.csv  survey_text_27_10.csv
Analytics_Translator_for_facilities_domain/Streamlit_dashboard/: Dashboard.py  requirements.txt
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/1. Computer Vision/: README.md
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/1. Computer Vision/Task4/: task_4.ipynb  task_4_dataset_preparation.ipynb  task_4_hyperparameter_tuning.ipynb  task_4_roots.ipynb  testing.ipynb
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/1. Computer Vision/Task5/: task_5.ipynb  task_5_tests.ipynb
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/1. Computer Vision/Task7/: task_7.ipynb
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/1. Computer Vision/Task8/: plant_lengths.csv  task_8.ipynb
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/2. Robotics/: README.md
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/2. Robotics/Y2B-2023-OT2_Twin-main/: PID_controler.py  RL_model.ipynb  Simulationgg.py  custom.urdf  ot2_gym_wrapper.py  ot_2_simulation_v6.urdf  sim_class.py  task13_get_plants  task13_testing.py  task_11.py  task_11_test.py  task_13 _PID.py  task_13.py  task_13_function.py  test_RL_models.py  test_wrapper.py  working_envelope.py
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/3. Reinforcement Learning/: train_pendulum.ipynb  train_pendulum.py
Artificial Intelligence Scientist - Computer Vision & Robotics NPEC/3. Reinforcement Learning/self-study/: SB.ipynb  Stable_Baselines.py  self-_study.py  test.py
Engineer MLOps - NPEC - Deploying AI Models/: LICENSE.md  Learning Log - Y2D_2023-24_ADSAI.pptx  README.md  Worklog - Y2D_2023-24_ADSAI.xlsx
Engineer MLOps - NPEC - Deploying AI Models/Azure/: deploy_to_aci.py  deployment_endpoints_cloud.py  deployment_endpoints_local.py  endpoint_cloud_test.py  example_conda.yml  pipeline - HP.py  pipeline.py
Engineer MLOps - NPEC - Deploying AI Models/Azure/pipeline_scripts/: data_loading.py  image_data_generator.py  landmark_detection.py  logger.py  logging_metrics.py  metric.py  model_architectures.py  model_evaluation.py  model_evaluation_temporary.py  model_hyperparameter_tuning.py  model_register.py  model_saving.py  model_training.py  model_training_2.py  pipeline.py  predictions.py  process_data.py  process_image.py  scoring.py
Engineer MLOps - NPEC - Deploying AI Models/Management/: MLOps_plan.md  ProjectBreakdown.md  Stand-Ups.md  Training_cost_expectations.md
Engineer MLOps - NPEC - Deploying AI Models/app/: docker-compose.yml
Engineer MLOps - NPEC - Deploying AI Models/app/backend/: Dockerfile  pyproject.toml  requirements.txt
Engineer MLOps - NPEC - Deploying AI Models/app/backend/ATHENA/: app.py  output.json  pipeline.py  pyproject.toml  setup.cfg  setup.py
Engineer MLOps - NPEC - Deploying AI Models/app/backend/ATHENA/ATHENA.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Engineer MLOps - NPEC - Deploying AI Models/app/backend/ATHENA/logs/models/: resnet_unet_10.json  resnet_unet_7.json  resnet_unet_binary_9.json
Engineer MLOps - NPEC - Deploying AI Models/app/backend/ATHENA/scr/: API_functions_inference.py  data_loading.py  image_data_generator.py  landmark_detection.py  logging_metrics.py  model_evaluation.py  model_register.py  model_saving.py  model_training.py  pipeline.py  predictions.py  process_image.py
Engineer MLOps - NPEC - Deploying AI Models/app/backend/ATHENA/scr/unittests/: model_test.json  test_data_loading.py  test_image_data_generator.py  test_landmark_detecion.py  test_landmark_detection.py  test_logging_metrics.py  test_metric.py  test_model_architectures.py  test_model_evaluation.py  test_model_register.py  test_model_saving.py  test_model_training.py  test_pipeline.py  test_predictions.py  test_process_data.py  test_process_image.py
Engineer MLOps - NPEC - Deploying AI Models/app/frontend/: Dockerfile  package.json
Task1/: task_1_requirements.ipynb
Task1/Images/labaled/: 1occluded_root_mask.tif  (+1 more)
Task2/: task_2.ipynb
Task3/: task_3.ipynb
(+678 files in other folders)
